--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,28 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+  list-style: none;
+} 
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+i {
+  color: white;
+  margin-left: 5px;
+}
+
 
 /* COMPONENTS */
 
@@ -13,9 +35,6 @@
   margin: 0 auto;
   width: 90%;
   max-width: 1400px;
-
-  /* DEBUG */
-  background-color: green;
 }
 
 .product-card {
@@ -65,6 +84,8 @@ header {
   align-items: center;
   height: 70px;
   background-color: #EF6837;
+  color: white;
+  font-size: 1.2rem;
 }
 
 header .container {
@@ -73,22 +94,17 @@ header .container {
   align-items: center;
 }
 
-header .menu {
-  
-  /* DEBUG */
-  background-color: aqua;
+header .menu ul {
+  display: flex;
 }
 
-header .logo {
-  
-  /* DEBUG */
-  background-color: aqua;
+header .menu a {
+  margin-right: 10px;
+  font-weight: bold;
 }
 
-header .icons {
-  
-  /* DEBUG */
-  background-color: aqua;
+header .logo img {
+  width: 140px;
 }
 
 
