--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,9 @@ i {
 /* HEADER */
 
 header {
+  position: fixed;
+  width: 100%;
+  z-index: 999;
   display: flex;
   align-items: center;
   height: 70px;
@@ -104,14 +107,25 @@ header .menu a {
 }
 
 header .logo img {
-  width: 140px;
+  height: 30px;
+  vertical-align: middle;
 }
 
 
 /* MAIN */
+main {
+  padding-top: 125px;
+}
+
+.product-card::before {
+  content: '';
+  display: block;
+  height: 70px;
+  margin: -70px 0 0;
+}
 
 .container .row{
-  margin: 55px 0 10px;
+  /* margin: 55px 0 10px; */
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -134,6 +148,7 @@ footer {
   align-items: center;
   background-color: #1A1A1A;
   height: 100px;
+  margin-top: 10px;
 }
 
 footer .container {
