--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 ul {
@@ -39,12 +39,12 @@ i {
 }
 
 .product-card {
-  width: calc((100% - 40px) / 3);
+  width: calc(100% / 3);
   min-width: 350px;
   margin-bottom: 45px;
-  /* DEBUG */
-  height: 700px;
-  background-color: chartreuse;
+
+  /* debug */
+  background-color: #63ff26;
 }
 
 .heart {
@@ -55,22 +55,35 @@ i {
   position: absolute;
   top: 10px;
   right: 0;
+  font-size: 2.5rem;
+  text-align: center;
+  line-height: 50px;
 }
 
-.discount {
+.heart:hover {
+  color: #ED3833;
+}
+
+.label {
   display: inline-block;
-  width: 50px;
   height: 25px;
+  text-align: center;
+  line-height: 25px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+.label.discount {
+  width: 50px;
   background-color: #ED3833;
   position: absolute;
   bottom: 40px;
   left: 0;
 }
 
-.text-label {
-  display: inline-block;
+.text.label {
   width: 100px;
-  height: 25px;
   background-color: #3A811D;
   position: absolute;
   bottom: 40px;
@@ -124,20 +137,39 @@ main {
   margin: -70px 0 0;
 }
 
-.container .row{
-  /* margin: 55px 0 10px; */
+.container .row {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .product-card .image {
-  width: 100%;
   position: relative;
+}
 
-  /* DEBUG */
-  height: 640px;
-  background-color: pink;
+.product-card .image img {
+  position: relative;
+  width: 100%;
+  object-fit: contain;  
+}
+
+.product-card .text {
+  font-size: 0.9rem;
+}
+
+.product-card .text .model {
+  display: block;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.product-card .text .current-price {
+  color: red;
+  font-weight: bold;
+}
+
+.product-card .text .old-price {
+  text-decoration: line-through;
 }
 
 
@@ -166,6 +198,7 @@ footer h3 {
 footer h4 {
   font-size: 0.9rem;
   margin-bottom: 10px;
+  padding-left: 5px;
 }
 
 footer .conditions ul {
