--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,7 @@ i {
   width: calc(100% / 3);
   min-width: 350px;
   margin-bottom: 45px;
-
-  /* debug */
-  background-color: #63ff26;
+  cursor: pointer;
 }
 
 .heart {
@@ -55,6 +53,7 @@ i {
   position: absolute;
   top: 10px;
   right: 0;
+  z-index: 100;
   font-size: 2.5rem;
   text-align: center;
   line-height: 50px;
@@ -72,6 +71,7 @@ i {
   font-size: 0.9rem;
   font-weight: bold;
   color: #fff;
+  z-index: 100;
 }
 
 .label.discount {
@@ -148,7 +148,6 @@ main {
 }
 
 .product-card .image img {
-  position: relative;
   width: 100%;
   object-fit: contain;  
 }
@@ -171,6 +170,25 @@ main {
 .product-card .text .old-price {
   text-decoration: line-through;
 }
+
+#img-1-hover,
+#img-2-hover,
+#img-3-hover,
+#img-4-hover,
+#img-5-hover,
+#img-6-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#product-1:hover #img-1-hover {
+  display: block;
+  z-index: 2;
+}
+
+
 
 
 /* FOOTER */
